--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
-    "postcss": "^8.5.3"
+    "papaparse": "^5.5.2",
+    "postcss": "^8.5.3",
+    "react-icons": "^5.5.0"
+  },
+  "devDependencies": {
+    "@types/papaparse": "^5.3.16"
   }
 }
