--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,13 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-email-validator==2.1.0.post1
-sqlalchemy==2.0.25
-asgiref==3.7.2
-flask==2.3.3
+gpxpy>=1.5.0
+geopy>=2.3.0
+Flask>=2.0.0
+Werkzeug>=2.0.0
+fastapi>=0.68.0
+uvicorn>=0.15.0
+sqlalchemy>=1.4.0
+pydantic>=1.8.0
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+python-multipart>=0.0.5
+email-validator>=1.1.3
+asgi2wsgi>=0.0.1 
