--- a/wingo-bets/package.json
+++ b/wingo-bets/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^3.3.1",
     "express": "^5.1.0",
     "formidable": "^3.5.4",
+    "html2canvas": "^1.4.1",
     "next": "^15.3.2",
     "pg": "^8.15.6",
     "react": "^18.2.0",
