--- a/wingo-bets/package.json
+++ b/wingo-bets/package.json
@@ -16,6 +16,7 @@
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
     "@types/formidable": "^3.4.5",
+    "@types/papaparse": "^5.3.16",
     "@types/pg": "^8.15.1",
     "clsx": "^2.1.0",
     "cors": "^2.8.5",
@@ -24,9 +25,11 @@
     "formidable": "^3.5.4",
     "html2canvas": "^1.4.1",
     "next": "^15.3.2",
+    "papaparse": "^5.5.3",
     "pg": "^8.15.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
