--- a/wingo-bets/package.json
+++ b/wingo-bets/package.json
@@ -24,6 +24,7 @@
     "express": "^5.1.0",
     "formidable": "^3.5.4",
     "html2canvas": "^1.4.1",
+    "lucide-react": "^0.511.0",
     "next": "^15.3.2",
     "papaparse": "^5.5.3",
     "pg": "^8.15.6",
