--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "html2canvas": "^1.4.1",
+    "lucide-react": "^0.511.0",
     "papaparse": "^5.5.2",
     "postcss": "^8.5.3",
     "react-icons": "^5.5.0"
