--- a/wingo-bets/package.json
+++ b/wingo-bets/package.json
@@ -31,7 +31,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "simplebar-react": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
