--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     },
 
     /* Type Definitions */
-    "types": ["react", "react-dom", "node"]
+    "types": ["react", "react-dom", "node"],
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
