--- a/wingo-bets/package.json
+++ b/wingo-bets/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.0",
+    "recharts": "^3.1.0",
     "simplebar-react": "^3.3.1"
   },
   "devDependencies": {
